# MobileNetSSD_CPP

./: CMakeLists.txt  README.md  执行命令  海康威视
src/: main.cpp  ssd_detect.cpp  ssd_detect.hpp
